# API_data_project_WSLVG

./: main.py  pyproject.toml  requirements-dev.txt  tests.py
.github/worflows/: main.yml
.github/workflows/: main.yml
